<resources>
    <string name="app_name">Rent</string>
    <string name="admin">ایڈمن</string>
    <string name="manager">مینیجر</string>
    <string name="monthlyRent">نومبر موصول</string>
    <string name="monthlyRemaining">نومبر بقایا جات</string>
    <string name="totalRent">کل موصول</string>
    <string name="totalRemaining">کل بقایا جات</string>
    <string name="tenant">کرایہ دار</string>
    <string name="record">کھاتہ</string>
    <string name="rent">کرایہ</string>
    <string name="expenditure">اخراجات</string>
    <string name="date">تاریخ</string>
    <string name="logout">لاگ آوٹ</string>
    <string name="selectID">منتخب کریں ID</string>
    <string name="block">بلاک</string>
    <string name="selectTenantName">کرایہ دار کا نام درج کریں</string>
    <string name="enterAmount">بل کی رقم درج کریں</string>
    <string name="advance">پیشگی</string>
    <string name="enterAdvance">بل کی رقم درج کریں</string>
    <string name="save">محفوظ کریں</string>
    <string name="name">نام</string>
    <string name="rentAmount">کھاتہ رقم</string>
    <string name="enterRent">کھاتہ کی رقم درج کریں</string>
    <string name="description">تفصیل</string>
    <string name="amountRent">کرایہ کی رقم</string>
    <string name="remaining">بقایا جات</string>
    <string name="amountRecieved">موصولہ رقم</string>
    <string name="selectamountRecieved">موصولہ رقم درج کریں</string>
    <string name="monthlyExpenditure">اس مہینے کے اخراجات</string>
    <string name="completeExpenditure">مکمل خرچہ</string>
    <string name="spent">خرچہ</string>
    <string name="amountSpent">اخراجات کی رقم</string>
    <string name="typeSpent">اخراجات کی قسم</string>
    <string name="selectetypeSpent">اخراجات کی قسم</string>
    <string name="login">لاگ ان کریں</string>
    <string name="selectBlock">بلاک منتخب کریں</string>
    <string name="searchItem">تلاش کریں</string>
    <string name="sum">جمع</string>
    <string name="remains">بقایا</string>
    <string name="all">سب</string>
    <string name="importData">برآمد کریں</string>
    <string name="recieved">موصول </string>



    <string-array name="id">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
    </string-array>

    <string-array name="blocks">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
        <item>H</item>
        <item>I</item>
        <item>J</item>
    </string-array>
    <string name="history">تاریخ</string>


</resources>