<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".expenditure"
    android:orientation="vertical"
    android:weightSum="1.3"
    android:paddingTop="12dp"
    android:paddingRight="16dp"
    android:paddingLeft="16dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.12"
        android:weightSum="1"
        android:layout_marginBottom="5dp">
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.62"/>

        <TextView
            android:id="@+id/expenditureRole"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.23"
            android:textColor="#707070"
            android:textSize="25sp"
            android:gravity="center"
            android:text="@string/admin"/>

        <ImageView
            android:id="@+id/expenditureAvatar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.15"
            android:src="@drawable/person"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:layout_gravity="right"
        android:textColor="#707070"
        android:textSize="21sp"
        android:gravity="center"
        android:text="@string/expenditure"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.08"
        android:gravity="center"
        android:layout_gravity="right"
        android:text="@string/monthlyExpenditure"
        android:textColor="#F60A20"
        android:textSize="21sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.08"
        android:gravity="center"
        android:layout_gravity="right"
        android:text="1456900"
        android:textColor="#F60A20"
        android:id="@+id/monthlyExpense"
        android:textSize="21sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.08"
        android:gravity="center"
        android:layout_gravity="right"
        android:text="@string/completeExpenditure"
        android:textColor="#F60A20"
        android:textSize="21sp"
        />
    <TextView
        android:id="@+id/total_expense"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.08"
        android:gravity="center"
        android:layout_gravity="right"
        android:text="658898870"
        android:textColor="#F60A20"
        android:textSize="21sp"
        />
<!--   edit texts -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.09"
        android:layout_gravity="right"
        android:textColor="#111111"
        android:textSize="16sp"
        android:gravity="center"
        android:text="@string/spent"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:layout_gravity="left"
        android:gravity="right"
        android:padding="8dp"
        android:inputType="number"
        android:hint="@string/amountSpent"
        android:background="@drawable/bounding_box"
        android:id="@+id/expenseAmount"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.09"
        android:layout_gravity="right"
        android:textColor="#111111"
        android:textSize="16sp"
        android:gravity="center"
        android:text="@string/typeSpent"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:layout_gravity="left"
        android:hint="@string/selectetypeSpent"
        android:gravity="right"
        android:padding="8dp"
        android:background="@drawable/bounding_box"
        android:id="@+id/expenseType"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.09"
        android:layout_gravity="right"
        android:textColor="#111111"
        android:textSize="16sp"
        android:gravity="center"
        android:text="@string/description"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:layout_gravity="left"
        android:hint="@string/description"
        android:textSize="17sp"
        android:padding="10dp"
        android:gravity="right"
        android:background="@drawable/bounding_box"
        android:layout_marginBottom="5dp"
        android:id="@+id/expenseDescription"
        />

    <Button
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:id="@+id/expenseSave"
        android:background="@drawable/round_views"
        android:textColor="#FFF"
        android:layout_gravity="right"
        />

</LinearLayout>