<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tenant"
    android:orientation="vertical"
    android:weightSum="1.3"
    android:paddingTop="12dp"
    android:paddingRight="16dp"
    android:paddingLeft="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:weightSum="1"
        android:layout_marginBottom="5dp">
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.62"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.23"
            android:textColor="#707070"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/admin"/>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.15"
            android:src="@drawable/person"/>
    </LinearLayout>

<TextView
    android:layout_width="wrap_content"
    android:layout_height="0dp"
    android:layout_weight="0.1"
    android:layout_gravity="right"
    android:textColor="#707070"
    android:textSize="21sp"
    android:gravity="center"
    android:text="@string/tenant"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.07"
        android:layout_gravity="right"
        android:textColor="#111111"
        android:textSize="16sp"
        android:gravity="center"
        android:text="ID"/>

    <Spinner

        android:id="@+id/tenantID"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.08"
        android:layout_gravity="left"
        style="@style/SpinnerTheme"
        android:textAlignment="textEnd"
        android:gravity="end"
       />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.07"
        android:layout_gravity="right"
        android:textColor="#111111"
        android:textSize="16sp"
        android:gravity="center"
        android:text="@string/block"/>

    <Spinner

        android:id="@+id/tenantBlock"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.08"
        android:layout_gravity="left"
        style="@style/SpinnerTheme"
        android:textAlignment="textEnd"
        android:gravity="end"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.07"
        android:layout_gravity="right"
        android:textColor="#111111"
        android:textSize="16sp"
        android:gravity="center"
        android:text="@string/name"/>

    <EditText
        android:id="@+id/tenantName"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.08"
        android:layout_gravity="left"
        android:background="@drawable/bounding_box"
        android:padding="8dp"
        android:inputType="text"
        android:gravity="right"
        android:hint="@string/selectTenantName"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.07"
        android:layout_gravity="right"
        android:textColor="#111111"
        android:textSize="16sp"
        android:gravity="center"
        android:text="@string/rent"/>

    <EditText
        android:id="@+id/rentAmount"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.08"
        android:layout_gravity="left"
        android:background="@drawable/bounding_box"
        android:padding="8dp"
        android:inputType="number"
        android:gravity="right"
        android:hint="@string/enterAmount"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.07"
        android:layout_gravity="right"
        android:textColor="#111111"
        android:textSize="16sp"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/advance"/>

    <EditText
        android:id="@+id/advanceAmount"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.08"
        android:layout_gravity="left"
        android:background="@drawable/bounding_box"
        android:padding="8dp"
        android:inputType="number"
        android:gravity="right"
        android:hint="@string/enterAmount"
        />

    <Button
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:id="@+id/tenant_btn_save"
        android:background="@drawable/round_views"
        android:textColor="#FFF"
        android:layout_marginBottom="1dp"
        android:layout_gravity="right"/>

</LinearLayout>