<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".history"
    android:orientation="vertical"
    android:weightSum="11"
    android:paddingTop="12dp"
    android:paddingRight="16dp"
    android:paddingLeft="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="1"
        android:layout_marginBottom="5dp">
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.62"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.23"
            android:textColor="#707070"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/admin"
            android:id="@+id/historyRole"/>

        <ImageView
            android:id="@+id/historyAvatar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.15"
            android:src="@drawable/person"
            />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:layout_gravity="right"
        android:textColor="#707070"
        android:textSize="21sp"
        android:gravity="center"
        android:text="@string/date"/>
    <SearchView
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:textAlignment="textEnd"
        android:gravity="end"
        android:background="@drawable/bounding_box"
        android:queryHint="@string/searchItem"
        android:iconifiedByDefault="false"
        android:layout_marginBottom="1dp"
        />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:id="@+id/radioOptions"
        android:orientation="horizontal"
        android:gravity="right"
        android:weightSum="1">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical|right"
            android:layout_gravity="center"
            android:text="@string/all"
            android:textSize="18sp"
            android:textColor="#111111"
            android:layout_weight="0.2"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:checked="true"
            android:id="@+id/radioAll"
            />
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.15"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical|right"
            android:layout_gravity="center"
            android:text="@string/remains"
            android:textSize="18sp"
            android:textColor="#111111"
            android:layout_weight="0.2"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:checked="false"
            android:id="@+id/radioRemaining"
            />
       <Space
           android:layout_width="0dp"
           android:layout_height="match_parent"
           android:layout_weight="0.15"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical|right"
            android:layout_gravity="center"
            android:text="@string/sum"
            android:textSize="18sp"
            android:textColor="#111111"
            android:layout_weight="0.2"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:checked="false"
            android:id="@+id/radioSum"/>
    </RadioGroup>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#EFEFEF"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:orientation="horizontal"
        android:weightSum="1"
        android:padding="2dp"
        android:gravity="right">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:text="@string/remains"
            android:gravity="center_vertical|center"
            android:textSize="18sp"
            android:textColor="#707070"
            />
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.08"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:text="@string/recieved"
            android:gravity="center_vertical|center"
            android:textSize="18sp"
            android:textColor="#707070"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.23"
            android:text="@string/rent"
            android:gravity="center_vertical|center"
            android:textSize="18sp"
            android:textColor="#707070"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:text="@string/name"
            android:gravity="center_vertical|right"
            android:textSize="18sp"
            android:textColor="#707070"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#EFEFEF"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:id="@+id/lvRecord"/>

    <Button
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/importData"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:id="@+id/btn_import"
        android:background="@drawable/round_views"
        android:textColor="#FFF"
        android:layout_gravity="right"/>


</LinearLayout>



