<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".rent"
    android:orientation="vertical"
    android:weightSum="11"
    android:paddingTop="12dp"
    android:paddingRight="16dp"
    android:paddingLeft="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="1">
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.62"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.23"
            android:textColor="#707070"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/admin"
            android:id="@+id/rentRole"/>

        <ImageView

            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.15"
            android:src="@drawable/person"
            android:id="@+id/rentAvatar"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:layout_gravity="right"
        android:textColor="#707070"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/rent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:weightSum="4.2"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="1"
            android:gravity="right"
            android:paddingRight="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:gravity="right"

                android:text="@string/remaining"
                android:textColor="#F60A20"
                android:textSize="18sp"
                />

            <TextView
                android:gravity="right"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:text="@string/amountRent"
                android:textColor="#111111"
                android:textSize="18sp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="1"
            android:gravity="right"
            android:paddingRight="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:gravity="right"
                android:id="@+id/remainingAmountT"
                android:text="456952"
                android:textColor="#F60A20"
                android:textSize="18sp"
                />

            <TextView
                android:gravity="right"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:id="@+id/rentAmountT"
                android:text="1456900"
                android:textColor="#111111"
                android:textSize="18sp"
                />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="1"
            android:gravity="right"
            android:paddingRight="5dp">

            <TextView
                android:gravity="right"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4"

                android:text="@string/advance"
                android:textColor="#45BF55"
                android:textSize="18sp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="1"
            android:gravity="right"
            android:paddingRight="5dp">

            <TextView
                android:gravity="right"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:text="658898870"
                android:textColor="#45BF55"
                android:textSize="18sp"
                android:id="@+id/advanceAmountT"
                />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:layout_gravity="right"
        android:textColor="#111111"
        android:textSize="16sp"
        android:text="ID"/>

    <Spinner
        android:id="@+id/rentId"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:layout_gravity="left"
        style="@style/SpinnerTheme"
        android:textAlignment="textEnd"
        android:gravity="end"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:layout_gravity="right"
        android:textColor="#111111"
        android:textSize="16sp"
        android:gravity="center"
        android:text="@string/block"/>

    <Spinner
        android:id="@+id/rentBlock"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:layout_gravity="left"
        style="@style/SpinnerTheme"
        android:textAlignment="textEnd"
        android:gravity="end"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:layout_gravity="right"
        android:textColor="#111111"
        android:textSize="16sp"
        android:gravity="center"
        android:text="@string/name"/>

    <EditText
        android:id="@+id/rentName"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:layout_gravity="left"
        android:background="@drawable/bounding_box"
        android:padding="8dp"
        android:inputType="text"
        android:gravity="right"
        android:hint="@string/selectTenantName"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:layout_gravity="right"
        android:textColor="#111111"
        android:textSize="16sp"
        android:gravity="center"
        android:text="@string/amountRecieved"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:layout_gravity="left"
        android:background="@drawable/bounding_box"
        android:padding="8dp"
        android:inputType="number"
        android:gravity="right"
        android:hint="@string/selectamountRecieved"
        android:id="@+id/rentAmountRecieved"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:layout_gravity="right"
        android:textColor="#111111"
        android:textSize="16sp"
        android:gravity="center"
        android:text="@string/description"/>

    <EditText

        android:id="@+id/rentDescription"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="left"
        android:hint="@string/description"
        android:textSize="17sp"
        android:padding="8dp"
        android:gravity="right"
        android:background="@drawable/bounding_box"
        android:layout_marginBottom="5dp"
        />

    <Button
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:id="@+id/rent_btn_save"
        android:background="@drawable/round_views"
        android:textColor="#FFF"
        android:layout_marginBottom="1dp"
        android:layout_gravity="right"/>

</LinearLayout>